// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rdme openapi validate > CI tests > should fail if user attempts to pass \`--github\` flag in CI environment 1`] = `
[Error: Parsing --github 
	The \`--github\` flag is only for usage in non-CI environments.
See more help with --help]
`;

exports[`rdme openapi validate > CI tests > should successfully validate prompt and not run GHA onboarding 1`] = `
{
  "result": "__tests__/__fixtures__/petstore-simple-weird-version.json is a valid OpenAPI API definition!",
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
",
  "stdout": "",
}
`;

exports[`rdme openapi validate > GHA onboarding E2E tests > should create GHA workflow if user passes in spec via opt (github flag enabled) 1`] = `
{
  "result": "
Your GitHub Actions workflow file has been created! ✨

Almost done! Push your newly created file (.github/workflows/validate-test-opt-spec-github-file.yml) to GitHub and you're all set 🚀

🦉 If you have any more questions, feel free to drop us a line! support@readme.io
",
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
",
  "stdout": "__tests__/__fixtures__/petstore-simple-weird-version.json is a valid OpenAPI API definition!

🚀 Let's get you set up with GitHub Actions! 🚀

",
}
`;

exports[`rdme openapi validate > GHA onboarding E2E tests > should create GHA workflow if user passes in spec via opt (github flag enabled) 2`] = `
"# This GitHub Actions workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`validate-test-opt-spec-github-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - validate-test-opt-spec-github-branch

jobs:
  rdme-openapi-validate:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v4

      - name: Run \`openapi validate\` command 🚀
        uses: readmeio/rdme@v7
        with:
          rdme: openapi validate __tests__/__fixtures__/petstore-simple-weird-version.json
"
`;

exports[`rdme openapi validate > GHA onboarding E2E tests > should create GHA workflow if user passes in spec via opt (including workingDirectory) 1`] = `
{
  "result": "
Your GitHub Actions workflow file has been created! ✨

Almost done! Push your newly created file (.github/workflows/validate-test-opt-spec-workdir-file.yml) to GitHub and you're all set 🚀

🦉 If you have any more questions, feel free to drop us a line! support@readme.io
",
  "stderr": "- Validating the API definition located at petstore.json...
",
  "stdout": "petstore.json is a valid OpenAPI API definition!

🐙 Looks like you're running this command in a GitHub Repository! 🐙

🚀 With a few quick clicks, you can run this \`openapi validate\` command via GitHub Actions (https://github.com/features/actions)

✨ This means it will run automagically with every push to a branch of your choice!

",
}
`;

exports[`rdme openapi validate > GHA onboarding E2E tests > should create GHA workflow if user passes in spec via opt (including workingDirectory) 2`] = `
"# This GitHub Actions workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`validate-test-opt-spec-github-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - validate-test-opt-spec-github-branch

jobs:
  rdme-openapi-validate:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v4

      - name: Run \`openapi validate\` command 🚀
        uses: readmeio/rdme@v7
        with:
          rdme: openapi validate petstore.json --workingDirectory=./__tests__/__fixtures__/relative-ref-oas
"
`;

exports[`rdme openapi validate > GHA onboarding E2E tests > should create GHA workflow if user passes in spec via opt 1`] = `
{
  "result": "
Your GitHub Actions workflow file has been created! ✨

Almost done! Push your newly created file (.github/workflows/validate-test-opt-spec-file.yml) to GitHub and you're all set 🚀

🦉 If you have any more questions, feel free to drop us a line! support@readme.io
",
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
",
  "stdout": "__tests__/__fixtures__/petstore-simple-weird-version.json is a valid OpenAPI API definition!

🐙 Looks like you're running this command in a GitHub Repository! 🐙

🚀 With a few quick clicks, you can run this \`openapi validate\` command via GitHub Actions (https://github.com/features/actions)

✨ This means it will run automagically with every push to a branch of your choice!

",
}
`;

exports[`rdme openapi validate > GHA onboarding E2E tests > should create GHA workflow if user passes in spec via opt 2`] = `
"# This GitHub Actions workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`validate-test-opt-spec-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - validate-test-opt-spec-branch

jobs:
  rdme-openapi-validate:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v4

      - name: Run \`openapi validate\` command 🚀
        uses: readmeio/rdme@v7
        with:
          rdme: openapi validate __tests__/__fixtures__/petstore-simple-weird-version.json
"
`;

exports[`rdme openapi validate > GHA onboarding E2E tests > should create GHA workflow if user passes in spec via prompts 1`] = `
{
  "result": "
Your GitHub Actions workflow file has been created! ✨

Almost done! Push your newly created file (.github/workflows/validate-test-file.yml) to GitHub and you're all set 🚀

🦉 If you have any more questions, feel free to drop us a line! support@readme.io
",
  "stderr": "- Looking for API definitions...
- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
",
  "stdout": "__tests__/__fixtures__/petstore-simple-weird-version.json is a valid OpenAPI API definition!

🐙 Looks like you're running this command in a GitHub Repository! 🐙

🚀 With a few quick clicks, you can run this \`openapi validate\` command via GitHub Actions (https://github.com/features/actions)

✨ This means it will run automagically with every push to a branch of your choice!

",
}
`;

exports[`rdme openapi validate > GHA onboarding E2E tests > should create GHA workflow if user passes in spec via prompts 2`] = `
"# This GitHub Actions workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`validate-test-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - validate-test-branch

jobs:
  rdme-openapi-validate:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v4

      - name: Run \`openapi validate\` command 🚀
        uses: readmeio/rdme@v7
        with:
          rdme: openapi validate __tests__/__fixtures__/petstore-simple-weird-version.json
"
`;

exports[`rdme openapi validate > GHA onboarding E2E tests > should reject if user says no to creating GHA workflow 1`] = `
{
  "error": [Error: GitHub Actions workflow creation cancelled. If you ever change your mind, you can run this command again with the \`--github\` flag.],
  "stderr": "- Looking for API definitions...
- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
",
  "stdout": "__tests__/__fixtures__/petstore-simple-weird-version.json is a valid OpenAPI API definition!

🐙 Looks like you're running this command in a GitHub Repository! 🐙

🚀 With a few quick clicks, you can run this \`openapi validate\` command via GitHub Actions (https://github.com/features/actions)

✨ This means it will run automagically with every push to a branch of your choice!

",
}
`;

exports[`rdme openapi validate > error handling > should throw an error if an invalid API definition has many errors 1`] = `
{
  "error": [ValidationError: OpenAPI schema validation failed.

REQUIRED must have required property 'url'

   7 |   },
   8 |   "servers": [
>  9 |     {
     |     ^ url is missing here!
  10 |       "urll": "http://petstore.swagger.io/v2"
  11 |     }
  12 |   ],

ADDITIONAL PROPERTY must NOT have additional properties

  24 |     "/pet/findByStatus": {
  25 |       "get": {
> 26 |         "tagss": [
     |         ^^^^^^^ tagss is not expected to be here!
  27 |           "pet"
  28 |         ],
  29 |         "summary": "Finds Pets by status",],
  "stderr": "- Validating the API definition located at ./__tests__/__fixtures__/very-invalid-oas.json...
✖ Validating the API definition located at ./__tests__/__fixtures__/very-invalid-oas.json...
",
  "stdout": "",
}
`;

exports[`rdme openapi validate > error handling > should throw an error if an invalid OpenAPI 3.0 definition is supplied 1`] = `
{
  "error": [ValidationError: API definition schema validation failed.

Missing $ref pointer "#/components/schemas/Error". Token "Error" does not exist.],
  "stderr": "- Validating the API definition located at ./__tests__/__fixtures__/invalid-oas.json...
✖ Validating the API definition located at ./__tests__/__fixtures__/invalid-oas.json...
",
  "stdout": "",
}
`;

exports[`rdme openapi validate > error handling > should throw an error if an invalid OpenAPI 3.1 definition is supplied 1`] = `
{
  "error": [ValidationError: OpenAPI schema validation failed.

REQUIRED must have required property 'name'

  24 |   "components": {
  25 |     "securitySchemes": {
> 26 |       "tlsAuth": {
     |                  ^ name is missing here!
  27 |         "type": "mutualTLS"
  28 |       }
  29 |     }],
  "stderr": "- Validating the API definition located at ./__tests__/__fixtures__/invalid-oas-3.1.json...
✖ Validating the API definition located at ./__tests__/__fixtures__/invalid-oas-3.1.json...
",
  "stdout": "",
}
`;

exports[`rdme openapi validate > error handling > should throw an error if an invalid Swagger definition is supplied 1`] = `
{
  "error": [ValidationError: Swagger schema validation failed.

ADDITIONAL PROPERTY must NOT have additional properties

  23 |         "description": "Find out more",
  24 |         "url": "http://swagger.io",
> 25 |         "this-shouldnt-be-here": true
     |         ^^^^^^^^^^^^^^^^^^^^^^^ this-shouldnt-be-here is not expected to be here!
  26 |       }
  27 |     }
  28 |   ],],
  "stderr": "- Validating the API definition located at ./__tests__/__fixtures__/invalid-swagger.json...
✖ Validating the API definition located at ./__tests__/__fixtures__/invalid-swagger.json...
",
  "stdout": "",
}
`;

exports[`rdme openapi validate > error handling > should throw an error if invalid JSON is supplied 1`] = `
{
  "error": [SyntaxError: Unexpected end of JSON input],
  "stderr": "- Validating the API definition located at ./__tests__/__fixtures__/invalid-json/yikes.json...
✖ Validating the API definition located at ./__tests__/__fixtures__/invalid-json/yikes.json...
",
  "stdout": "",
}
`;

exports[`rdme openapi validate > should adhere to .gitignore in subdirectories 1`] = `
{
  "result": "nest/petstore.json is a valid OpenAPI API definition!",
  "stderr": "- Looking for API definitions...
- Validating the API definition located at nest/petstore.json...
",
  "stdout": "ℹ️  We found nest/petstore.json and are attempting to validate it.
",
}
`;

exports[`rdme openapi validate > should discover and upload an API definition if none is provided 1`] = `
{
  "result": "petstore.json is a valid OpenAPI API definition!",
  "stderr": "- Looking for API definitions...
- Validating the API definition located at petstore.json...
",
  "stdout": "ℹ️  We found petstore.json and are attempting to validate it.
",
}
`;

exports[`rdme openapi validate > should use specified working directory 1`] = `
{
  "result": "petstore.json is a valid OpenAPI API definition!",
  "stderr": "- Validating the API definition located at petstore.json...
",
  "stdout": "",
}
`;
